--- a/Main Website (Finalised).html
+++ b/Main Website (Finalised).html
@@ -10,7 +10,7 @@
   <source src="Aqua.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-<Body background = "supersimple-website\Background Photo.jpg">
+<Body background = "/Background Photo.jpg">
 <p> Hello World. This is our first webpage. </p>
 <h1> We are from BERC1/1 </h1>
 <ol>
