--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GitHub Profile</title>
     <style>
         body {
-            background-image: url('link-to-your-photo');
+            background-image: url('https://github.com/Hadif912/supersimple-website/blob/main/Background%20Photo.jpg?raw=true');
             background-size: cover;
             background-repeat: no-repeat;
             height: 100vh;
