--- a/nasilemak.html
+++ b/nasilemak.html
@@ -1,6 +1,6 @@
 <h1> Nasi Lemak Bungkus </h1>
 <h2> BAHAN A (NASI) </h2>
-<Body background = "C:\Users\HP\Documents\Lab 1\Recipe Photo.jpg">
+<Body background = "https://github.com/Hadif912/supersimple-website/blob/main/Recipe%20Photo.jpg?raw=true">
 <ol>
 <li>3 cawan beras</li>
 <li>2 cawan pekat</li>
