--- a/index.html
+++ b/index.html
@@ -1,50 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>This is our first website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GitHub Profile</title>
+    <style>
+        body {
+            background-image: url('link-to-your-photo');
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
-<body style="background-image: url('https://github.com/Hadif912/supersimple-website/blob/main/Background%20Photo.jpg?raw=true'); background-size: cover;">
-<h1>Hello World. This is our first webpage.</h1>
-<h2>We are from BERC1/1</h2>
-<ol>
-  <li>Wan Muhammad Hadif Bin Wan Shukri</li>
-  <li>Yasmin Batrisyiea Binti Adeli</li>
-  <li>Siti Nur Sharinah Binti Mahyuddin</li>
-</ol>
-<hr>
-<h3>This is our favourite website</h3>
-<ol>
-  <li><a href="http://www.facebook.com">Facebook</a></li>
-  <li><a href="http://google.com">Search everything in Google.</a></li>
-</ol>
-<h3>We are looking forward to having some conversation with you</h3>
-<p>Click <a href="mailto:hurinhujan123@google.com">here</a> to start a conversation.</p>
-<p>We are the website owner.</p>
-<p><img src="photo.webp" width="92" height="120" alt="The awesome owner"></p>
-<h3>Our favourite meal recipe</h3>
-<p><a href="nasilemak.html"><img src="NasiLemakBungkus-2.webp" width="92" height="120" alt="Nasi Lemak"></a></p>
-<h3>My Family Member</h3>
-<table border="1">
-  <thead>
-    <tr>
-      <th>Relationship</th>
-      <th>Name</th>
-      <th>Age</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Mother</td>
-      <td>Angelina Jolie</td>
-      <td>60 years old</td>
-    </tr>
-    <tr>
-      <td>Father</td>
-      <td>Brad Pitt</td>
-      <td>62 years old</td>
-    </tr>
-  </tbody>
-</table>
+<body>
+    <h1>Hello, GitHub!</h1>
 </body>
 </html>
